k8s/kubernets/app/traefik2/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashbroad-basic-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik2-dashbroad-basic-auth
