k8s/kubernets/app/traefik2/traefix-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`traefik.demo.com`)  # 指定域名
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
